--- a/_posts/2021-03-22-DP300.md
+++ b/_posts/2021-03-22-DP300.md
@@ -32,4 +32,4 @@ Another valuable resource is Bob Wards book, [Azure SQL Revealed](https://www.am
 
 Personally I thing these three, and some form of practical experience using SQL server will help you become an "Microsoft Certified: Azure Database Administrator Associate" too.
 
-![Certificate](\assets\images\dp300.jpg).
+![Certificate](https://images.youracclaim.com/size/680x680/images/edc0b0d8-55ec-4dfe-9353-22c1bc4e07e8/azure-database-administrator-associate-600x600.png).
