--- a/_posts/2021-03-22-DP300.md
+++ b/_posts/2021-03-22-DP300.md
@@ -32,4 +32,4 @@ Another valuable resource is Bob Wards book, [Azure SQL Revealed](https://www.am
 
 Personally I thing these three, and some form of practical experience using SQL server will help you become an "Microsoft Certified: Azure Database Administrator Associate" too.
 
-![Certificate](https://docs.microsoft.com/en-us/media/learn/certification/badges/microsoft-certified-associate-badge.svg).
+![Certificate](https://www.youracclaim.com/earner/earned/badge/3e5cf52e-c3e2-4031-bd6a-3fa28009de94).
