update post to give it some more flesh

--- a/_posts/2021-03-22-DP300.md
+++ b/_posts/2021-03-22-DP300.md
@@ -14,15 +14,24 @@ tags:
 
 Today I passed the [Exam DP-300: Administering Relational Databases on Microsoft Azure](https://docs.microsoft.com/en-us/learn/certifications/exams/dp-300) to become an ["Microsoft Certified: Azure Database Administrator Associate"](https://docs.microsoft.com/en-us/learn/certifications/azure-database-administrator-associate/).
 
-In this post I want to share the resources that benefitted me in helping me achieve the certifications.
+In this post I want to share the resources that benefitted me in helping me achieve this certification.
 
 ## Microsoft Learn
 
-I did all the recommended learning paths that are referenced by exam page. Most specifically the [Azure Fundamentals learning path](https://docs.microsoft.com/en-us/learn/paths/azure-sql-fundamentals/). In the learning path you can go through all the concepts of Azure SQL family of products at your own pace.
+I did all the recommended learning paths that are referenced by exam page. Most specifically the [Azure Fundamentals learning path](https://docs.microsoft.com/en-us/learn/paths/azure-sql-fundamentals/). In the learning path you can go through all the concepts of Azure SQL family of products at your own pace. But also the other recommended paths (at the time):
+
+- [Plan and implement data platform resources](https://docs.microsoft.com/en-us/learn/paths/plan-implement-data-platform-resources/)
+- [Implement a secure environment for a database service](https://docs.microsoft.com/en-us/learn/paths/implement-secure-environment-database-service/)
+- [Monitor and optimize operational resources in SQL Server](https://docs.microsoft.com/en-us/learn/paths/monitor-optimize-operational-resources-sql-server/)
+- [Optimize query performance in SQL Server](https://docs.microsoft.com/en-us/learn/paths/optimize-query-performance-sql-server/)
+- [Automate tasks in SQL Server](https://docs.microsoft.com/en-us/learn/paths/automate-tasks-sql-server/)
+- [Plan and implement a high availability and disaster recovery environment](https://docs.microsoft.com/en-us/learn/paths/plan-implement-high-availability-disaster-recovery-environment/)
 
 ## YouTube
 
-I also watched the complete [Azure SQL for beginners](https://www.youtube.com/playlist?list=PL3EZ3A8mHh0y0EVZoKGljNPytdjrxXIZ9) playlist. This is the equivalent of the learning path, only presented by [Anna Hoffman](https://twitter.com/AnalyticAnna) and [Bob Ward](https://twitter.com/bobwardms). Together they present the topics in easy to digist method. 
+I also watched the complete [Azure SQL for beginners](https://www.youtube.com/playlist?list=PL3EZ3A8mHh0y0EVZoKGljNPytdjrxXIZ9) playlist. This is the equivalent of the learning path, only presented by [Anna Hoffman](https://twitter.com/AnalyticAnna) and [Bob Ward](https://twitter.com/bobwardms). Together they present the topics in easy to digist method.
+
+The [Data Exposes](https://www.youtube.com/playlist?list=PLlrxD0HtieHieV7Jls72yFPSKyGqycbZR) series is also a good resource the get a better understanding of most of the features that are available and that are added over time. This is more a general resource, instead of a specific one for the certification.
 
 ## Bob Wards Azure SQL book
 
@@ -30,6 +39,6 @@ Another valuable resource is Bob Wards book, [Azure SQL Revealed](https://www.am
 
 ## General
 
-Personally I thing these three, and some form of practical experience using SQL server will help you become an "Microsoft Certified: Azure Database Administrator Associate" too.
+I think these three resources, and some form of practical experience using SQL server will help you become an "Microsoft Certified: Azure Database Administrator Associate" too.
 
-![Certificate](https://github.com/mverbaas/mverbaas.github.io/blob/ed9662afedb76c683a97247996f4515c3641abdf/assets/images/dp300.png).
+![Certificate](https://www.fastlane.live/media/wysiwyg/azure_database_administrator_1.png).
