--- a/_posts/2021-03-22-DP300.md
+++ b/_posts/2021-03-22-DP300.md
@@ -40,4 +40,4 @@ Another valuable resource is Bob Wards book, [Azure SQL Revealed](https://www.am
 
 I think these three resources, and some form of practical experience using SQL server will help you become an "Microsoft Certified: Azure Database Administrator Associate" too.
 
-![Certificate](https://www.fastlane.live/media/wysiwyg/azure_database_administrator_1.png).
+![Certificate](/assets/images/dp300.png).
