--- a/_posts/2022-10-15-DP900.md
+++ b/_posts/2022-10-15-DP900.md
@@ -70,7 +70,7 @@ Further more, I just used the free Microsoft Learn paths that are offered on the
 
 ## What's Next?
 
-Next up is the [DP-203 Exam][3]. Going through the site this will really pull me out of my comfort zone and away from SQL Server. This has excited and scared at the same time. Hopefully you can read a similar post as this in the near future.
+Next up is the [DP-203 Exam][3]. Going through the site this will really pull me out of my comfort zone and away from SQL Server. This has me excited and scared at the same time. Hopefully you can read a similar post as this in the near future.
 
 ## Thanks
 
