--- a/_posts/2022-10-15-DP900.md
+++ b/_posts/2022-10-15-DP900.md
@@ -13,7 +13,7 @@ tags:
 
 Yesterday I took and passed Exam DP-900: Microsoft Azure Data Fundamentals. ✅
 
-![dp900 badge](../assets/images/microsoft-certified-azure-data-fundamentals.png)
+![dp900 badge](/assets/images/microsoft-certified-azure-data-fundamentals.png)
 
 This certication is the first one in hopefully a series of new certifications, as I've started a learning path with my [employer][1].
 
